plugins {
    id 'java'
}

group = 'de.plixo'
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.jetbrains:annotations:24.0.1'
    implementation 'org.jetbrains:annotations:24.0.1'
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'

    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'

    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'commons-io', name: 'commons-io', version: '2.7'
    implementation 'org.apache.commons:commons-text:1.10.0'
}

test {

}
sourceCompatibility = JavaVersion.VERSION_19
targetCompatibility = JavaVersion.VERSION_19

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}